bonus/conf/argocd/argocd-gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-host
  namespace: argocd
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Endpoints
metadata:
  name: gitlab-host
  namespace: argocd
subsets:
  - addresses:
      - ip: 192.168.56.110
    ports:
      - port: 8081
